sync local repo with remote

--- a/index.html
+++ b/index.html
@@ -243,24 +243,58 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
-            <div class="is-size-5 publication-authors">
-              <!-- TODO: Replace with your paper authors and their personal links -->
-              <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
-                  </div>
+            <h1 class="title is-1 publication-title">SoM-1K: A Thousand-Problem Benchmark Dataset for Strength of Materials</h1>
+<div class="is-size-5 publication-authors">
+  <span class="author-block">
+    Qixin Wan<sup>*</sup>,
+  </span>
+  <span class="author-block">
+    Zilong Wang<sup>*</sup>,
+  </span>
+  <span class="author-block">
+    Jingwen Zhou,
+  </span>
+  <span class="author-block">
+    Wanting Wang,
+  </span>
+  <span class="author-block">
+    Ziheng Geng,
+  </span>
+  <span class="author-block">
+    Jiachen Liu,
+  </span>
+  <span class="author-block">
+    Ran Cao<sup>†</sup>,
+  </span>
+  <span class="author-block">
+    Minghui Cheng<sup>†</sup>,
+  </span>
+  <span class="author-block">
+    Lu Cheng<sup>†</sup>
+  </span>
+</div>
 
-                  <div class="is-size-5 publication-authors">
-                    <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">Institution Name<br>Conference name and year</span>
-                    <!-- TODO: Remove this line if no equal contribution -->
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-                  </div>
+
+<div class="is-size-5 publication-authors">
+  <span class="author-block">
+    ¹ College of Civil Engineering, Hunan University, Changsha, 410082, China
+  </span><br>
+  <span class="author-block">
+    ² Department of Civil & Architectural Engineering, University of Miami, Coral Gables, FL 33146, USA
+  </span><br>
+  <span class="author-block">
+    ³ Department of Electrical and Computer Engineering, University of Miami, Coral Gables, FL 33146, USA
+  </span><br>
+  <span class="author-block">
+    ⁴ School of Architecture, University of Miami, Coral Gables, FL 33146, USA
+  </span><br>
+  <span class="author-block">
+    ⁵ Department of Computer Science, University of Illinois Chicago, Chicago, IL 60607, USA
+  </span><br>
+  <span class="eql-cntrb">
+    <small><sup>*</sup>Equal contribution, <sup>†</sup>Corresponding authors: r.cao@hnu.edu.cn, minghui.cheng@miami.edu, lucheng@uic.edu</small>
+  </span>
+</div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
@@ -288,7 +322,7 @@
 
                 <!-- TODO: Update with your arXiv paper ID -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                  <a href="http://arxiv.org/abs/2509.21079" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -341,73 +375,6 @@
 </section>
 <!-- End paper abstract -->
 
-
-<!-- Image carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- TODO: Replace with your research result images -->
-        <img src="static/images/photowall.png" alt="First research result visualization" loading="lazy"/>
-        <!-- TODO: Replace with description of this result -->
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
-      </div>
-
-  </div>
-</div>
-</div>
-</section>
-<!-- End image carousel -->
-
-
-
-
-<!-- Youtube video -->
-
-<!-- End youtube video -->
-
-
-<!-- Video carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <!-- TODO: Add poster image for better preview -->
-          <video poster="" id="video1" controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <!-- TODO: Add poster image for better preview -->
-          <video poster="" id="video2" controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <!-- TODO: Add poster image for better preview -->
-          <video poster="" id="video3" controls muted loop height="100%" preload="metadata">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End video carousel -->
-
-
-
-
-
-
 <!-- Paper poster -->
 <section class="hero is-small is-light">
   <div class="hero-body">
@@ -415,7 +382,7 @@
       <h2 class="title">Poster</h2>
 
       <!-- TODO: Replace with your poster PDF -->
-      <iframe  src="static/pdfs/SoM-1K.pdf" width="100%" height="550">
+      <iframe  src="static/pdfs/2509.21079v1.pdf" width="100%" height="550">
           </iframe>
 
       </div>
