--- a/index.html
+++ b/index.html
@@ -402,12 +402,14 @@
           <span class="copy-text">Copy</span>
         </button>
       </div>
-      <pre id="bibtex-code"><code>@article{YourPaperKey2024,
-  title={Your Paper Title Here},
-  author={First Author and Second Author and Third Author},
-  journal={Conference/Journal Name},
-  year={2024},
-  url={https://your-domain.com/your-project-page}
+      <pre id="bibtex-code"><code>@misc{wan2025som1kthousandproblembenchmarkdataset,
+      title={SoM-1K: A Thousand-Problem Benchmark Dataset for Strength of Materials},
+      author={Qixin Wan and Zilong Wang and Jingwen Zhou and Wanting Wang and Ziheng Geng and Jiachen Liu and Ran Cao and Minghui Cheng and Lu Cheng},
+      year={2025},
+      eprint={2509.21079},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2509.21079},
 }</code></pre>
     </div>
 </section>
