--- a/index.html
+++ b/index.html
@@ -246,31 +246,31 @@
             <h1 class="title is-1 publication-title">SoM-1K: A Thousand-Problem Benchmark Dataset for Strength of Materials</h1>
 <div class="is-size-5 publication-authors">
   <span class="author-block">
-    Qixin Wan<sup>*</sup>,
+    Qixin Wan<sup>1, *</sup>,
   </span>
   <span class="author-block">
-    Zilong Wang<sup>*</sup>,
+    Zilong Wang<sup>1, *</sup>,
   </span>
   <span class="author-block">
-    Jingwen Zhou,
+    Jingwen Zhou<sup>1</sup>,
   </span>
   <span class="author-block">
-    Wanting Wang,
+    Wanting Wang<sup>1</sup>,
   </span>
   <span class="author-block">
-    Ziheng Geng,
+    Ziheng Geng<sup>2</sup>,
   </span>
   <span class="author-block">
-    Jiachen Liu,
+    Jiachen Liu<sup>3</sup>,
   </span>
   <span class="author-block">
-    Ran Cao<sup>†</sup>,
+    Ran Cao<sup>1, †</sup>,
   </span>
   <span class="author-block">
-    Minghui Cheng<sup>†</sup>,
+    Minghui Cheng<sup>2, 4, †</sup>,
   </span>
   <span class="author-block">
-    Lu Cheng<sup>†</sup>
+    Lu Cheng<sup>5, †</sup>
   </span>
 </div>
 
@@ -292,44 +292,37 @@
     ⁵ Department of Computer Science, University of Illinois Chicago, Chicago, IL 60607, USA
   </span><br>
   <span class="eql-cntrb">
-    <small><sup>*</sup>Equal contribution, <sup>†</sup>Corresponding authors: r.cao@hnu.edu.cn, minghui.cheng@miami.edu, lucheng@uic.edu</small>
+    <small><sup>*</sup>Equal contribution, <sup>†</sup>Corresponding authors: rcao@hnu.edu.cn, minghui.cheng@miami.edu, lucheng@uic.edu</small>
   </span>
 </div>
 
                   <div class="column has-text-centered">
-                    <div class="publication-links">
-                         <!-- TODO: Update with your arXiv paper ID -->
-                      <span class="link-block">
-                        <a href="http://arxiv.org/abs/2509.21079.pdf" target="_blank"
-                        class="external-link button is-normal is-rounded is-dark">
-                        <span class="icon">
-                          <i class="fas fa-file-pdf"></i>
-                        </span>
-                        <span>Paper</span>
-                      </a>
-                    </span>
+                   <div class="publication-links">
 
-                    <!-- TODO: Add your supplementary material PDF or remove this section -->
-                    <span class="link-block">
-                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"
-                      class="external-link button is-normal is-rounded is-dark">
-                      <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
-                      </span>
-                      <span>Supplementary</span>
-                    </a>
-                  </span>
+  <!-- Hugging Face button replacing Supplementary -->
+  <span class="link-block">
+    <a href="https://huggingface.co/YOUR_MODEL_PAGE" target="_blank"
+    class="external-link button is-normal is-rounded is-dark">
+      <span class="icon">
+        <i class="ai ai-huggingface"></i>
+      </span>
+      <span>Hugging Face</span>
+    </a>
+  </span>
 
-                <!-- TODO: Update with your arXiv paper ID -->
-                <span class="link-block">
-                  <a href="http://arxiv.org/abs/2509.21079" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv</span>
-                </a>
-              </span>
+  <!-- arXiv button remains -->
+  <span class="link-block">
+    <a href="http://arxiv.org/abs/2509.21079" target="_blank"
+    class="external-link button is-normal is-rounded is-dark">
+      <span class="icon">
+        <i class="ai ai-arxiv"></i>
+      </span>
+      <span>arXiv</span>
+    </a>
+  </span>
+
+</div>
+
             </div>
           </div>
         </div>
@@ -348,10 +341,6 @@
         <!-- TODO: Add your video file path here -->
         <source src="static/videos/SoM-1K.mp4" type="video/mp4">
       </video>
-      <!-- TODO: Replace with your video description -->
-      <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus.
-      </h2>
     </div>
   </div>
 </section>
