--- a/index.html
+++ b/index.html
@@ -298,17 +298,19 @@
 
                   <div class="column has-text-centered">
                    <div class="publication-links">
+                     
+<!-- Hugging Face button replacing Supplementary -->
+<span class="link-block">
+  <a href="https://huggingface.co/YOUR_MODEL_PAGE" target="_blank"
+     class="external-link button is-normal is-rounded is-dark">
+    <span class="icon">
+      <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg"
+           alt="Hugging Face" style="height: 1.2em; vertical-align: middle;">
+    </span>
+    <span>Hugging Face</span>
+  </a>
+</span>
 
-  <!-- Hugging Face button replacing Supplementary -->
-  <span class="link-block">
-    <a href="https://huggingface.co/YOUR_MODEL_PAGE" target="_blank"
-    class="external-link button is-normal is-rounded is-dark">
-      <span class="icon">
-        <i class="ai ai-huggingface"></i>
-      </span>
-      <span>Hugging Face</span>
-    </a>
-  </span>
 
   <!-- arXiv button remains -->
   <span class="link-block">
