--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <!-- Primary Meta Tags -->
   <!-- TODO: Replace with your paper title and author names -->
-  <meta name="title" content="PAPER_TITLE - AUTHOR_NAMES">
+  <meta name="title" content="SoM-1K">
   <!-- TODO: Write a compelling 150-160 character description of your research -->
   <meta name="description" content="BRIEF_DESCRIPTION_OF_YOUR_RESEARCH_CONTRIBUTION_AND_FINDINGS">
   <!-- TODO: Add 5-10 relevant keywords for your research area -->
@@ -202,37 +202,20 @@
           <i class="fas fa-times"></i>
         </button>
       </div>
-      <div class="works-list">
-        <!-- TODO: Replace with your lab's related works -->
-        <a href="https://arxiv.org/abs/PAPER_ID_1" class="work-item" target="_blank">
-          <div class="work-info">
-            <!-- TODO: Replace with actual paper title -->
-            <h5>Paper Title 1</h5>
-            <!-- TODO: Replace with brief description -->
-            <p>Brief description of the work and its main contribution.</p>
-            <!-- TODO: Replace with venue and year -->
-            <span class="work-venue">Conference/Journal 2024</span>
-          </div>
-          <i class="fas fa-external-link-alt"></i>
-        </a>
-        <!-- TODO: Add more related works or remove extra items -->
-        <a href="https://arxiv.org/abs/PAPER_ID_2" class="work-item" target="_blank">
-          <div class="work-info">
-            <h5>Paper Title 2</h5>
-            <p>Brief description of the work and its main contribution.</p>
-            <span class="work-venue">Conference/Journal 2023</span>
-          </div>
-          <i class="fas fa-external-link-alt"></i>
-        </a>
-        <a href="https://arxiv.org/abs/PAPER_ID_3" class="work-item" target="_blank">
-          <div class="work-info">
-            <h5>Paper Title 3</h5>
-            <p>Brief description of the work and its main contribution.</p>
-            <span class="work-venue">Conference/Journal 2023</span>
-          </div>
-          <i class="fas fa-external-link-alt"></i>
-        </a>
-      </div>
+<!--      <div class="works-list">-->
+<!--        &lt;!&ndash; TODO: Replace with your lab's related works &ndash;&gt;-->
+<!--        <a href="https://arxiv.org/abs/PAPER_ID_1" class="work-item" target="_blank">-->
+<!--          <div class="work-info">-->
+<!--            &lt;!&ndash; TODO: Replace with actual paper title &ndash;&gt;-->
+<!--            <h5>Paper Title 1</h5>-->
+<!--            &lt;!&ndash; TODO: Replace with brief description &ndash;&gt;-->
+<!--            <p>Brief description of the work and its main contribution.</p>-->
+<!--            &lt;!&ndash; TODO: Replace with venue and year &ndash;&gt;-->
+<!--            <span class="work-venue">Conference/Journal 2024</span>-->
+<!--          </div>-->
+<!--          <i class="fas fa-external-link-alt"></i>-->
+<!--        </a>-->
+<!--      </div>-->
     </div>
   </div>
 
@@ -298,7 +281,7 @@
 
                   <div class="column has-text-centered">
                    <div class="publication-links">
-                     
+
 <!-- Hugging Face button replacing Supplementary -->
 <span class="link-block">
   <a href="https://huggingface.co/YOUR_MODEL_PAGE" target="_blank"
